Early implementation of distributed

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,21 @@
 /DataProcessing.Monolith/DataProcessing.Domain/obj
 /DataProcessing.Monolith/DataProcessing.Domain/bin/Debug/net8.0
 /DataProcessing.Monolith/DataProcessing.Infrastructure/obj
+/DataProcessing.Distributed/.vs/DataProcessing.Distributed
+/DataProcessing.Monolith/.vs/ProjectEvaluation
+/DataProcessing.Distributed/dashboard/.vs/dashboard
+/DataProcessing.Distributed/ingestion/.vs
+/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Api/obj
+/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Application/obj
+/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Domain/obj
+/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Infrastructure/obj
+/DataProcessing.Distributed/processing/.vs
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Api/bin/Debug/net8.0
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Api/obj
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Aplication/obj
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Application/bin/Debug/net8.0
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Application/obj
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Domain/bin/Debug/net8.0
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Domain/obj
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Infrastructure/bin/Debug/net8.0
+/DataProcessing.Distributed/processing/DataProcessing.Processing.Infrastructure/obj
