--- a/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Api/DataProcessing.Ingestion.Api.csproj
+++ b/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Api/DataProcessing.Ingestion.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -20,6 +20,10 @@
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.3.1" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DataProcessing.Ingestion.Application\DataProcessing.Ingestion.Application.csproj" />
   </ItemGroup>
 
 </Project>
