--- a/DataProcessing.Distributed/ingestion/Dockerfile
+++ b/DataProcessing.Distributed/ingestion/Dockerfile
@@ -8,20 +8,25 @@ EXPOSE 5003
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copy csproj files and restore
-COPY ["DataProcessing.Ingestion.Api/DataProcessing.Ingestion.Api.csproj", "DataProcessing.Ingestion.Api/"]
-COPY ["DataProcessing.Ingestion.Application/DataProcessing.Ingestion.Application.csproj", "DataProcessing.Ingestion.Application/"]
-COPY ["DataProcessing.Ingestion.Domain/DataProcessing.Ingestion.Domain.csproj", "DataProcessing.Ingestion.Domain/"]
-COPY ["DataProcessing.Ingestion.Infrastructure/DataProcessing.Ingestion.Infrastructure.csproj", "DataProcessing.Ingestion.Infrastructure/"]
-RUN dotnet restore "DataProcessing.Ingestion.Api/DataProcessing.Ingestion.Api.csproj"
+# Copy only the csproj files first, keeping the folder structure
+COPY ["ingestion/DataProcessing.Ingestion.Api/DataProcessing.Ingestion.Api.csproj", "ingestion/DataProcessing.Ingestion.Api/"]
+COPY ["ingestion/DataProcessing.Ingestion.Application/DataProcessing.Ingestion.Application.csproj", "ingestion/DataProcessing.Ingestion.Application/"]
+COPY ["ingestion/DataProcessing.Ingestion.Domain/DataProcessing.Ingestion.Domain.csproj", "ingestion/DataProcessing.Ingestion.Domain/"]
+COPY ["ingestion/DataProcessing.Ingestion.Infrastructure/DataProcessing.Ingestion.Infrastructure.csproj", "ingestion/DataProcessing.Ingestion.Infrastructure/"]
+COPY ["DataProcessing.Monitoring/DataProcessing.Monitoring/DataProcessing.Monitoring.csproj", "DataProcessing.Monitoring/DataProcessing.Monitoring/"]
 
-# Copy all source files
-COPY . .
+# Restore dependencies
+RUN dotnet restore "ingestion/DataProcessing.Ingestion.Api/DataProcessing.Ingestion.Api.csproj"
 
-WORKDIR "/src/DataProcessing.Ingestion.Api"
+# Copy all source files (preserve the folder structure)
+COPY ingestion/ ingestion/
+COPY DataProcessing.Monitoring/ DataProcessing.Monitoring/
+
+WORKDIR "/src/ingestion/DataProcessing.Ingestion.Api"
 
 # Build and publish
 RUN dotnet build "DataProcessing.Ingestion.Api.csproj" -c Release -o /app/build
+
 FROM build AS publish
 RUN dotnet publish "DataProcessing.Ingestion.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
