Added logs and tracing

--- a/DataProcessing.Distributed/dashboard/DataProcessing.Dashboard.Api/DataProcessing.Dashboard.Api.csproj
+++ b/DataProcessing.Distributed/dashboard/DataProcessing.Dashboard.Api/DataProcessing.Dashboard.Api.csproj
@@ -22,6 +22,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataProcessing.Dashboard.Infrastructure\DataProcessing.Dashboard.Infrastructure.csproj" />
+    <ProjectReference Include="..\..\DataProcessing.Monitoring\DataProcessing.Monitoring\DataProcessing.Monitoring.csproj" />
   </ItemGroup>
 
 </Project>
