--- a/DataProcessing.Distributed/dashboard/DataProcessing.Dashboard.Application/DataProcessing.Dashboard.Application.csproj
+++ b/DataProcessing.Distributed/dashboard/DataProcessing.Dashboard.Application/DataProcessing.Dashboard.Application.csproj
@@ -19,4 +19,8 @@
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\DataProcessing.Monitoring\DataProcessing.Monitoring\DataProcessing.Monitoring.csproj" />
+  </ItemGroup>
+
 </Project>
