--- a/DataProcessing.Distributed/processing/DataProcessing.Processing.Application/DataProcessing.Processing.Application.csproj
+++ b/DataProcessing.Distributed/processing/DataProcessing.Processing.Application/DataProcessing.Processing.Application.csproj
@@ -26,6 +26,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DataProcessing.Processing.Domain\DataProcessing.Processing.Domain.csproj" />
+    <ProjectReference Include="..\..\DataProcessing.Monitoring\DataProcessing.Monitoring\DataProcessing.Monitoring.csproj" />
   </ItemGroup>
 
 </Project>
