--- a/DataProcessing.Distributed/processing/Dockerfile
+++ b/DataProcessing.Distributed/processing/Dockerfile
@@ -2,26 +2,30 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 5000
-EXPOSE 5001
 
 # Build image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /src
 
-# Copy csproj files and restore
-COPY ["DataProcessing.Processing.Api/DataProcessing.Processing.Api.csproj", "DataProcessing.Processing.Api/"]
-COPY ["DataProcessing.Processing.Application/DataProcessing.Processing.Application.csproj", "DataProcessing.Processing.Application/"]
-COPY ["DataProcessing.Processing.Domain/DataProcessing.Processing.Domain.csproj", "DataProcessing.Processing.Domain/"]
-COPY ["DataProcessing.Processing.Infrastructure/DataProcessing.Processing.Infrastructure.csproj", "DataProcessing.Processing.Infrastructure/"]
-RUN dotnet restore "DataProcessing.Processing.Api/DataProcessing.Processing.Api.csproj"
+# Copy csproj files
+COPY ["processing/DataProcessing.Processing.Api/DataProcessing.Processing.Api.csproj", "processing/DataProcessing.Processing.Api/"]
+COPY ["processing/DataProcessing.Processing.Application/DataProcessing.Processing.Application.csproj", "processing/DataProcessing.Processing.Application/"]
+COPY ["processing/DataProcessing.Processing.Domain/DataProcessing.Processing.Domain.csproj", "processing/DataProcessing.Processing.Domain/"]
+COPY ["processing/DataProcessing.Processing.Infrastructure/DataProcessing.Processing.Infrastructure.csproj", "processing/DataProcessing.Processing.Infrastructure/"]
+COPY ["DataProcessing.Monitoring/DataProcessing.Monitoring/DataProcessing.Monitoring.csproj", "DataProcessing.Monitoring/DataProcessing.Monitoring/"]
 
-# Copy all source files
-COPY . .
+# Restore dependencies
+RUN dotnet restore "processing/DataProcessing.Processing.Api/DataProcessing.Processing.Api.csproj"
 
-WORKDIR "/src/DataProcessing.Processing.Api"
+# Copy all sources
+COPY processing/ processing/
+COPY DataProcessing.Monitoring/ DataProcessing.Monitoring/
+
+WORKDIR "/src/processing/DataProcessing.Processing.Api"
 
 # Build and publish
 RUN dotnet build "DataProcessing.Processing.Api.csproj" -c Release -o /app/build
+
 FROM build AS publish
 RUN dotnet publish "DataProcessing.Processing.Api.csproj" -c Release -o /app/publish /p:UseAppHost=false
 
