--- a/DataProcessing.Monolith/DataProcessing.Api/DataProcessing.Api.csproj
+++ b/DataProcessing.Monolith/DataProcessing.Api/DataProcessing.Api.csproj
@@ -25,6 +25,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DataProcessing.Application\DataProcessing.Application.csproj" />
     <ProjectReference Include="..\DataProcessing.Infrastructure\DataProcessing.Infrastructure.csproj" />
+    <ProjectReference Include="..\DataProcessing.Monitoring\DataProcessing.Monitoring\DataProcessing.Monitoring.csproj" />
   </ItemGroup>
 
 </Project>
