--- a/DataProcessing.Monolith/Dockerfile
+++ b/DataProcessing.Monolith/Dockerfile
@@ -1,32 +1,42 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
-# This stage is used when running from VS in fast mode (Default for Debug configuration)
+# Base runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
 
-
-# This stage is used to build the service project
+# Build image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
+
+# Copy only the csproj files first (keep folder structure)
 COPY ["DataProcessing.Api/DataProcessing.Api.csproj", "DataProcessing.Api/"]
 COPY ["DataProcessing.Application/DataProcessing.Application.csproj", "DataProcessing.Application/"]
 COPY ["DataProcessing.Domain/DataProcessing.Domain.csproj", "DataProcessing.Domain/"]
 COPY ["DataProcessing.Infrastructure/DataProcessing.Infrastructure.csproj", "DataProcessing.Infrastructure/"]
-RUN dotnet restore "./DataProcessing.Api/DataProcessing.Api.csproj"
-COPY . .
-WORKDIR "/src/DataProcessing.Api"
-RUN dotnet build "./DataProcessing.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+COPY ["DataProcessing.Monitoring/DataProcessing.Monitoring/DataProcessing.Monitoring.csproj", "DataProcessing.Monitoring/DataProcessing.Monitoring/"]
 
-# This stage is used to publish the service project to be copied to the final stage
+# Restore dependencies
+RUN dotnet restore "DataProcessing.Api/DataProcessing.Api.csproj"
+
+# Copy all source files (preserve structure)
+COPY DataProcessing.Api/ DataProcessing.Api/
+COPY DataProcessing.Application/ DataProcessing.Application/
+COPY DataProcessing.Domain/ DataProcessing.Domain/
+COPY DataProcessing.Infrastructure/ DataProcessing.Infrastructure/
+COPY DataProcessing.Monitoring/ DataProcessing.Monitoring/
+
+# Build
+WORKDIR "/src/DataProcessing.Api"
+RUN dotnet build "DataProcessing.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./DataProcessing.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "DataProcessing.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final image
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
