--- a/DataProcessing.Monolith/docker-compose.yaml
+++ b/DataProcessing.Monolith/docker-compose.yaml
@@ -6,6 +6,85 @@ services:
       context: .
       dockerfile: Dockerfile
     ports:
-      - "8080:8080"
+      - "8080:80"
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      ASPNETCORE_ENVIRONMENT: Development
+      ASPNETCORE_URLS: "http://+:80"
+      ConnectionStrings__SensorDb: "Server=sqlserver,1433;Database=SensorDb;User Id=sa;Password=YourPassword123!;TrustServerCertificate=True;"
+      ZIPKIN_URL: "http://zipkin-monolith:9411/api/v2/spans"
+      LOKI_URL: "http://loki-monolith:3100"
+      SEQ_URL: "http://seq-monolith:5341"
+    depends_on:
+      - sqlserver-monolith
+      - zipkin-monolith
+      - seq-monolith
+      - loki-monolith
+
+  sqlserver-monolith:
+    image: mcr.microsoft.com/mssql/server:2022-latest
+    environment:
+      SA_PASSWORD: "YourPassword123!"
+      ACCEPT_EULA: "Y"
+    ports:
+      - "1434:1433"
+    volumes:
+      - sqlserver-monolith-data:/var/opt/mssql
+
+  seq-monolith:
+    image: datalust/seq
+    ports:
+      - "5343:5341"
+      - "5344:80"
+    environment:
+      SEQ_FIRSTRUN_ADMINPASSWORD: "password"
+      ACCEPT_EULA: "Y"
+    volumes:
+      - seq-monolith-data:/data
+
+  zipkin-monolith:
+    image: openzipkin/zipkin:3.4.1
+    ports:
+      - "9412:9411"
+    environment:
+      - STORAGE_TYPE=mysql
+      - MYSQL_HOST=zipkin-storage-monolith
+      - MYSQL_USER=zipkin
+      - MYSQL_PASS=zipkin
+      - MYSQL_DB=zipkin
+    depends_on:
+      - zipkin-storage-monolith
+
+  zipkin-storage-monolith:
+    image: openzipkin/zipkin-mysql
+    ports:
+      - "3307:3306"
+    volumes:
+      - zipkin-monolith-data:/mysql/data
+
+  grafana-monolith:
+    image: grafana/grafana:latest
+    ports:
+      - "3001:3000"
+    environment:
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_USERS_ALLOW_SIGN_UP=false
+    volumes:
+      - grafana-monolith-data:/var/lib/grafana
+    depends_on:
+      - seq-monolith
+      - zipkin-monolith
+
+  loki-monolith:
+    image: grafana/loki:latest
+    ports:
+      - "3101:3100"
+    volumes:
+      - loki-monolith-data:/loki
+
+volumes:
+  sqlserver-monolith-data:
+  seq-monolith-data:
+  zipkin-monolith-data:
+  grafana-monolith-data:
+  loki-monolith-data:
