--- a/DataProcessing.Distributed/dashboard/Dockerfile
+++ b/DataProcessing.Distributed/dashboard/Dockerfile
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 5004
 EXPOSE 5005
+EXPOSE 9464
 
 # Build image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
