--- a/DataProcessing.Distributed/ingestion/Dockerfile
+++ b/DataProcessing.Distributed/ingestion/Dockerfile
@@ -3,6 +3,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 5002
 EXPOSE 5003
+EXPOSE 9464
 
 # Build image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
