--- a/DataProcessing.Distributed/processing/Dockerfile
+++ b/DataProcessing.Distributed/processing/Dockerfile
@@ -2,6 +2,7 @@
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 WORKDIR /app
 EXPOSE 5000
+EXPOSE 9464
 
 # Build image
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
