added grafana data sources

--- a/DataProcessing.Distributed/docker-compose.yml
+++ b/DataProcessing.Distributed/docker-compose.yml
@@ -110,19 +110,21 @@ services:
       - ingestion
       - dashboard
   grafana:
-    image: grafana/grafana:latest
-    ports:
-    - "3000:3000"
-    environment:
-    - GF_SECURITY_ADMIN_USER=admin
-    - GF_SECURITY_ADMIN_PASSWORD=admin
-    - GF_USERS_ALLOW_SIGN_UP=false
-    volumes:
-    - grafana_data:/var/lib/grafana
-    depends_on:
-    - seq
-    - zipkin
-    - prometheus
+      image: grafana/grafana:latest
+      ports:
+        - "3000:3000"
+      environment:
+        - GF_SECURITY_ADMIN_USER=admin
+        - GF_SECURITY_ADMIN_PASSWORD=admin
+        - GF_USERS_ALLOW_SIGN_UP=false
+      volumes:
+        - grafana_data:/var/lib/grafana
+        - ./grafana-provisioning:/etc/grafana/provisioning
+      depends_on:
+        - seq
+        - zipkin
+        - prometheus
+        - loki
   loki:
     image: grafana/loki:latest
     ports:
