--- a/DataProcessing.Distributed/processing/DataProcessing.Processing.Api/DataProcessing.Processing.Api.csproj
+++ b/DataProcessing.Distributed/processing/DataProcessing.Processing.Api/DataProcessing.Processing.Api.csproj
@@ -23,6 +23,7 @@
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.3.1" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
