--- a/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Application/DataProcessing.Ingestion.Application.csproj
+++ b/DataProcessing.Distributed/ingestion/DataProcessing.Ingestion.Application/DataProcessing.Ingestion.Application.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Serilog" Version="4.3.0" />
     <PackageReference Include="Serilog.Sinks.Grafana.Loki" Version="8.3.1" />
     <PackageReference Include="Serilog.Sinks.Seq" Version="9.0.0" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.8.1" />
   </ItemGroup>
 
   <ItemGroup>
